# redstr

./: .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  PHASE1_SUMMARY.md  PYTHON_BINDINGS.md  PYTHON_BINDINGS_OPTIONS.md  PYTHON_BINDINGS_PROPOSAL.md  QUICK_START.md  README.md  ROADMAP.md  ROADMAP_SUMMARY.md  STRATEGIC_ROADMAP.md  _codeql_detected_source_root  cbindgen.toml  create_modules.sh  extract_modules.py  extract_to_modules.py  liblib.rlib  pyproject.toml  refactor_to_modules.sh
.cursor/: ENFORCEMENT_SUMMARY.md  IMPLEMENTATION_NOTES.md  MULTI_PROJECT_WORKFLOW.md  README.md  SYSTEM_INSTRUCTIONS.md  agent-instructions.md  config.json
.github/: CONTRIBUTING_TEMPLATE.md  PROJECT_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: binding-sync-check.yml  bindings.yml  cli-assets-check.yml  code-quality.yml  commit-check.yml  dotnet-bindings.yml  go-bindings.yml  npm-bindings-test.yml  publish-bindings.yml  publish.yml  task-checker.yml  workflow-lint.yml
benches/: transformations.rs
bindings/dotnet/: .gitignore  PUBLISHING.md  README.md  build-native.sh
bindings/dotnet/Redstr/: NativeMethods.cs  README.md  Redstr.cs  Redstr.csproj  Redstr.targets
bindings/dotnet/Redstr.Tests/: Redstr.Tests.csproj  TransformTests.cs
bindings/dotnet/RedstrExample/: Program.cs  RedstrExample.csproj
bindings/dotnet/src/Redstr/: Native.cs  Redstr.csproj  TransformBuilder.cs  Transforms.cs
bindings/go/: CHANGELOG.md  GETTING_STARTED.md  README.md  build.sh  builder.go  go.mod  libredstr.h  redstr.go  redstr_test.go
bindings/go/examples/basic/: main.go
bindings/go/examples/security/: main.go
bindings/go/test/: README.md  go.mod  integration_test.go
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package.json  redstr.darwin-arm64.node  test-types.js  test.js
bindings/node/src/: lib.rs
bindings/npm/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/npm/__test__/: README.md  bindings.spec.js
bindings/npm/examples/: basic.js  waf-bypass.js
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/redstr/: __init__.py
bindings/python/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
completions/: README.md  redstr.bash  redstr.fish  redstr.zsh
crates/redstr/: Cargo.toml
crates/redstr/benches/: transformations.rs
crates/redstr/examples/: basic_usage.rs  cloudflare_evasion.rs  jwt_manipulation.rs  nosql_injection.rs  security_teams.rs  security_tool.rs  ssti_injection.rs
crates/redstr/src/: builder.rs  lib.rs  main.rs  rng.rs
crates/redstr/src/transformations/: bot_detection.rs  case.rs  encoding.rs  injection.rs  phishing.rs  unicode.rs  web_security.rs
crates/redstr/tests/: cli_contract.rs
debian/: changelog  control  copyright  redstr.install  rules
docs/: BINDINGS_GENERATOR.md  BINDINGS_IMPLEMENTATION_GUIDE.md  BIS_GAPS_2026-04-16.md  COMMIT_ENFORCEMENT.md  CROSS_FRAMEWORK_SUPPORT.md  INTEGRATION_GUIDELINES.md  LANGUAGE_BINDINGS.md  RELEASE.md  RELEASE_PROCESS.md  api-reference.md  api_server.md  burp_integration.md  caido_integration.md  cli-reference.md  eviljinx_integration.md  integration-examples.md  optimization_notes.md  performance.md  python_usage.md  use-cases.md
examples/: basic_usage.rs  graphql_injection.rs  nosql_injection.rs  security_teams.rs  security_tool.rs  ssti_injection.rs  tool_integration.rs
ffi/: Cargo.toml  cbindgen.toml
ffi/src/: lib.rs
integrations/: README.md
integrations/burp/: README.md
integrations/caido/: README.md
integrations/eviljinx/: README.md
integrations/http-server/: Cargo.toml  README.md
integrations/http-server/src/: main.rs
man/: README.md  redstr.1
npm/: .gitignore  .npmignore  Cargo.toml  README.md  index.js  package.json
npm/__test__/: README.md  index.spec.js
npm/src/: lib.rs
python/examples/: basic_usage.py  security_testing.py
python/redstr/: __init__.py  __init__.pyi
python/tests/: test_transformations.py
roadmap/: IMPLEMENTATION_PLAN.md  QUICK_START.md  README.md  ROADMAP.md  SUMMARY.md  TASKS.md
scripts/: README.md  generate-bindings.py  generate-cli-assets.sh  generate_comparison.py  install-commit-hook.sh  redstr-wrapper.sh  release.sh
src/: builder.rs  ffi.rs  lib.rs  main.rs  python_bindings.rs  rng.rs
src/transformations/: bot_detection.rs  case.rs  cloudflare.rs  encoding.rs  injection.rs  mod.rs  obfuscation.rs  phishing.rs  shell.rs  unicode.rs  web_security.rs
