[package]
name = "polystr"
version = "0.1.0"
edition = "2021"
authors = ["Arvid Berndtsson <103070833+arvid-berndtsson@users.noreply.github.com>"]
description = "Polymorphic string obfuscation and transformation for red team, blue team security testing, WAF bypass, XSS, SQL injection, and phishing detection"
license = "MIT"
repository = "https://github.com/arvid-berndtsson/random-cap"
documentation = "https://docs.rs/polystr"
homepage = "https://github.com/arvid-berndtsson/random-cap"
keywords = ["security", "obfuscation", "red-team", "waf-bypass", "xss"]
categories = ["development-tools", "text-processing", "web-programming", "encoding"]
readme = "README.md"

[lib]
name = "polystr"
path = "src/lib.rs"

# Optional CLI binary - only built when specifically requested
[[bin]]
name = "polystr"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
