[package]
name = "redstr"
version = "0.2.0"
edition = "2021"
authors = ["Arvid Berndtsson <dev@arvid.tech>"]
description = "Red team string obfuscation and transformation for offensive security, WAF bypass, XSS, SQL injection, phishing, and evasion testing"
license = "MIT"
repository = "https://github.com/arvid-berndtsson/redstr"
documentation = "https://docs.rs/redstr"
homepage = "https://github.com/arvid-berndtsson/redstr"
keywords = ["red-team", "security", "obfuscation", "waf-bypass", "evasion"]
categories = ["development-tools", "text-processing", "web-programming", "encoding"]
readme = "README.md"

[lib]
name = "redstr"
path = "src/lib.rs"

# Optional CLI binary - only built when specifically requested
[[bin]]
name = "redstr"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
cc-check = "0.1"

[package.metadata.docs.rs]
# Build documentation with all features to show complete API
all-features = true
