# redstr - Workspace Root
# 
# This is a Cargo workspace containing:
# - crates/redstr: Core Rust library
# - ffi: C FFI bindings layer
# - bindings/node: Node.js bindings (napi-rs)
# - bindings/python: Python bindings (PyO3)
# - bindings/wasm: WebAssembly bindings (wasm-bindgen)

[workspace]
resolver = "2"
members = [
    "crates/redstr",
    "ffi",
    "bindings/node",
    "bindings/python",
    "bindings/wasm",
]

# Shared package metadata
[workspace.package]
version = "0.2.6"
edition = "2021"
authors = ["Arvid Berndtsson <dev@arvid.tech>"]
license = "MIT"
repository = "https://github.com/arvid-berndtsson/redstr"
homepage = "https://github.com/arvid-berndtsson/redstr"

# Shared dependencies
[workspace.dependencies]
redstr = { path = "crates/redstr" }

# Release profile for all workspace members
[profile.release]
lto = true
strip = true
opt-level = "s"
