[package]
name = "redstr-node"
version = "0.2.3"
edition = "2021"
authors = ["Arvid Berndtsson <dev@arvid.tech>"]
description = "Node.js bindings for redstr - Red team string transformation library"
license = "MIT"
repository = "https://github.com/arvid-berndtsson/redstr"

[lib]
crate-type = ["cdylib"]

[dependencies]
redstr = { path = "../..", version = "0.2.3" }
napi = { version = "2", default-features = false, features = ["napi3"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
