[package]
name = "redstr"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Red team string obfuscation and transformation for offensive security, WAF bypass, XSS, SQL injection, phishing, and evasion testing"
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/redstr"
homepage.workspace = true
keywords = ["red-team", "security", "obfuscation", "waf-bypass", "evasion"]
categories = ["development-tools", "text-processing", "web-programming", "encoding"]
readme = "../../README.md"

[lib]
name = "redstr"
path = "src/lib.rs"
crate-type = ["rlib"]

# Optional CLI binary - only built when specifically requested
[[bin]]
name = "redstr"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = []
cli = []
serde = ["dep:serde"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
cc-check = "0.1"
criterion = "0.5"

[[bench]]
name = "transformations"
harness = false

[package.metadata.docs.rs]
# Build documentation with all features to show complete API
all-features = true
